syntax = "proto3";

option csharp_namespace = "Fleetmanagement.GrpcAPI";


message SuccessResponse
{
	bool SuccessFul = 1;
	string ErrorMessage = 2;
}